Added resume page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h3 class="masthead-brand">Jacob Ortt</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="#">Resume</a>
+            <a class="nav-link" href="resume.html">Resume</a>
             <a class="nav-link" href="geer-week/index.html">Living in ETLC</a>
             <a class="nav-link" href="#">New Blog</a>
           </nav>
