Remade resume page to have collapsing projects

--- a/resume.html
+++ b/resume.html
@@ -244,36 +244,82 @@
       <div class="row">
         <div class="col">
           <h2>Projects:</h2>
-          <p><b>Smart Curling Broom:</b></p>
-          <ul>
-            <li>Built in 2014 U of A Computer Engineering Hackathon (2nd place)</li>
-            <li>Embedded pressure sensors and accelerometer</li>
-            <li>BLE connectable to android app </li>
-          </ul>
-          <p><b>Whack-a-mole Arcade Game:</b></p>
-          <ul>
-            <li>Built custom wooden arcade cabinet</li>
-            <li>Designed simple games with buttons, leds, and a buzzer</li>
-          </ul>
-          <p><b>Board Game Timer:</b></p>
-          <ul>
-            <li>Designed simple timer with button, lcd screen, and custom enclosure</li>
-            <li>Purpose was to act as a chess clock for more than 2 people</li>
-          </ul>
-          <p><b>Poker Tournament Organizer:</b></p>
-          <ul>
-            <li>WPF application designed to do basic scheduling of poker tournaments</li>
-          </ul>
-          <p><b>University Club Website Development:</b></p>
-          <ul>
-            <li>Designed a blog for the Computer Engineering Club during undergraduate degree</li>
-            <li>Maintained the U of A Science Fiction and Fantasy Club website throughout undergraduate degree</li>
-          </ul>
-          <p><b>This Website!</b></p>
-          <ul>
-            <li>Hosted on AWS</li>
-            <li>Uses bootstrap and a bunch of hand written html</li>
-          </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-1">
+          <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapse-project-1" aria-expanded="false" aria-controls="collapse-project-1">
+            <img src="images/plus-sign.png" width="30">
+          </button>
+        </div>
+        <div class="col">
+          <h3>Smart Curling Broom</h3>
+        </div>
+      </div>
+      <div class="row collapse" id="collapse-project-1">
+        <div class="col-4">
+          <img src="images/smartbroom.jpg" width=100%>
+        </div>
+        <div class="col">
+          <p>The smart curling broom project came out of the 2015 UofA Computer Engineering Hackathon. The idea was to make a curling broom with built in accelerometers and pressure sensors. The broom can monitor both how quickly the curler is sweeping as well as how hard the curler is pressing down on the broom. It can then connect via bluetooth low energy to a mobile phone so that a coach see the data. I built this broom together with Jared Rewarts and Stephan Just, getting 2nd place in the competition.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-1">
+          <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapse-project-2" aria-expanded="false" aria-controls="collapse-project-2">
+            <img src="images/plus-sign.png" width="30">
+          </button>
+        </div>
+        <div class="col">
+          <h3>Whack-a-mole Arcade Game</h3>
+        </div>
+      </div>
+      <div class="row collapse" id="collapse-project-2">
+        <div class="col-4">
+          <img src="images/arcadegame.jpg" width=100%>
+        </div>
+        <div class="col">
+          <p>The whack-a-mole arcade game was built as part of UofA's Geer Week in 2014. The wooden cabinet was built with the help of John Wood. It was debuted at the telus world of science for an engineering exhibit. After that it was used many times at the university to promote computer engineering.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-1">
+          <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapse-project-3" aria-expanded="false" aria-controls="collapse-project-3">
+            <img src="images/plus-sign.png" width="30">
+          </button>
+        </div>
+        <div class="col">
+          <h3>Board Game Timer</h3>
+        </div>
+      </div>
+      <div class="row collapse" id="collapse-project-3">
+        <div class="col-4">
+          <img src="images/boardgametimer.jpg" width=100%>
+        </div>
+        <div class="col">
+          <p>The board game timer is similar in use to chess clock. The problem with chess clocks is that they can only be used in 1 vs. 1 games. I designed this timer with the help of John Wood out of the desire to have a chess clock that I could use for any multiplayer board game. The user interface consists of only a rotary encoder and a single button but is highly configurable.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-1">
+          <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapse-project-4" aria-expanded="false" aria-controls="collapse-project-4">
+            <img src="images/plus-sign.png" width="30">
+          </button>
+        </div>
+        <div class="col">
+          <h3>Poker Tournament Organizer</h3>
+        </div>
+      </div>
+      <div class="row collapse" id="collapse-project-4">
+        <div class="col-4">
+          <img src="images/pokertimer.png" width=100%>
+        </div>
+        <div class="col">
+          <p>This app is designed to display the schedule of a poker tournament. It displays the current small blind, large blind, when the blinds will change, and when the next break will be. It is themed for the Valley's Edge Resort so that they can use it for their event.</p>
         </div>
       </div>
 
