Changed personal introduction line

--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
         <div class="col">
           <h1>Jacob Ortt</h1>
           <h2>B.Sc E.I.T.</h2>
-          <p>I am a computer engineer that specializes in embedded firmware development.</p>
+          <p>I am a computer engineer that specializes in both software design and firmware design.</p>
         </div>
         <div class="col resume-right">
           <p>#203 11633 105th Avenue NW<br/>
