--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <main role="main" class="inner cover">
         <h1 class="cover-heading">Hi, I'm Jacob</h1>
-        <p class="lead">I like to make stuff. Specifically embedded systems. This webpages will showcase some of my work and hobbies</p>
+        <p class="lead">I like to make stuff. I am a computer engineer with a love of both software and electronics design.</p>
       </main>
 
       <footer class="mastfoot mt-auto">
