Update resume with up to date information

--- a/resume.html
+++ b/resume.html
@@ -41,13 +41,10 @@
       <div class="row">
         <div class="col">
           <h1>Jacob Ortt</h1>
-          <h2>B.Sc E.I.T.</h2>
           <p>I am a computer engineer that specializes in both software design and firmware design.</p>
         </div>
         <div class="col resume-right">
-          <p>#203 11633 105th Avenue NW<br/>
-            Edmonton, Alberta, Canada<br/>
-            T5H 0L9<br/>
+          <p>Edmonton, Alberta, Canada<br/>
             Phone: 780-222-7564<br/>
             Email: jacobortt@gmail.com</p>
         </div>
@@ -74,24 +71,24 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-3 dark-cell">
-          <p>C</p>
+          <p>C / C++ Development</p>
         </div>
         <div class="col-3 dark-cell">
-          <p>4+</p>
+          <p>5</p>
         </div>
         <div class="col-3 dark-cell">
-          <p>XInC2, 8051</p>
+          <p>XInC2, ARM Cortex-M0, C++11 and up, Qt, Unreal Engine</p>
         </div>
       </div>
       <div class="row justify-content-center">
         <div class="col-3">
-          <p>C++</p>
+          <p>Agile Development</p>
         </div>
         <div class="col-3">
-          <p>3+</p>
+          <p>3</p>
         </div>
         <div class="col-3">
-          <p>XInC2, ARM Cortex-M0, C++11 and up, Qt</p>
+          <p>JIRA, Scrum</p>
         </div>
       </div>
       <div class="row justify-content-center">
@@ -99,10 +96,10 @@
           <p>Assembly</p>
         </div>
         <div class="col-3 dark-cell">
-          <p>3+</p>
+          <p>3</p>
         </div>
         <div class="col-3 dark-cell">
-          <p>XInC2</p>
+          <p>XInC2, x86</p>
         </div>
       </div>
       <div class="row justify-content-center">
@@ -110,7 +107,7 @@
           <p>Python</p>
         </div>
         <div class="col-3">
-          <p>3+</p>
+          <p>3</p>
         </div>
         <div class="col-3">
           <p> </p>
@@ -121,7 +118,7 @@
           <p>C#</p>
         </div>
         <div class="col-3 dark-cell">
-          <p>2+</p>
+          <p>2</p>
         </div>
         <div class="col-3 dark-cell">
           <p>.NET 4.5, WPF</p>
@@ -132,7 +129,7 @@
           <p>Test Driven Development</p>
         </div>
         <div class="col-3">
-          <p>3+</p>
+          <p>3</p>
         </div>
         <div class="col-3">
           <p>Boost Test</p>
@@ -143,21 +140,10 @@
           <p>Continuous Integration</p>
         </div>
         <div class="col-3 dark-cell">
-          <p>3+</p>
+          <p>5</p>
         </div>
         <div class="col-3 dark-cell">
           <p>Jenkins</p>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-3">
-          <p>Agile Development</p>
-        </div>
-        <div class="col-3">
-          <p>2+</p>
-        </div>
-        <div class="col-3">
-          <p>JIRA</p>
         </div>
       </div>
 
@@ -169,28 +155,47 @@
 
       <div class="row">
         <div class="col">
-          <p><b>Eleven Engineering Incorporated</b></p>
+          <p><b>Game Developer</b></p>
         </div>
         <div class="col resume-right">
-          <p>June 2015 - Present</p>
+          <p>November 2018 - present</p>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <p>Design Engineer</p>
+          <p>Beamdog</p>
           <ul>
-            <li>Engineered wireless speaker systems by designing in-house   wireless protocols, bringing many products to mass production</li>
-            <li>Wrote embedded C++ and assembly for Eleven Engineering designed   microcontroller (XInC2)</li>
-            <li>Organized and lead weekly engineering meetings</li>
-            <li>Interfaced directly with clients to receive product feedback</li>
-            <li>Worked directly with chinese factories to assist the mass   production of products</li>
+            <li>Worked as a hardware specialist to port old PC games to new consoles (PS4, Xbox, Switch)</li>
+            <li>Launched 3 seperate titles on 3 platforms under tight time constraints</li>
+            <li>Spent time working on small teams at the start of projects then helped scale up those teams a projects accelerated</li>
           </ul>
         </div>
       </div>
 
       <div class="row">
         <div class="col">
-          <p><b>Halliburton</b></p>
+          <p><b>Design Engineer</b></p>
+        </div>
+        <div class="col resume-right">
+          <p>June 2015 - October 2018</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p>Eleven Engineering</p>
+          <ul>
+            <li>Engineered wireless speaker systems by designing in-house wireless protocols, bringing many products to mass production</li>
+            <li>Wrote embedded C++ and assembly for Eleven Engineering designed microcontroller (XInC2)</li>
+            <li>Organized and lead weekly engineering meetings</li>
+            <li>Interfaced directly with clients to receive product feedback</li>
+            <li>Worked directly with chinese factories to assist the mass production of products</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <p><b>Student Computer Engineer</b></p>
         </div>
         <div class="col resume-right">
           <p>May - December 2014</p>
@@ -198,7 +203,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <p>Student Computer Engineer</p>
+          <p>Halliburton</p>
           <ul>
             <li>Developed calibration procedure for gamma radiation sensors</li>
             <li>Primarily wrote C# programs for automating testing processes</li>
@@ -209,7 +214,7 @@
 
       <div class="row">
         <div class="col">
-          <p><b>Glenrose Rehabilitation Research Center</b></p>
+          <p><b>Undergraduate Researcher</b></p>
         </div>
         <div class="col resume-right">
           <p>January - August 2013</p>
@@ -217,7 +222,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <p>Undergraduate Researcher</p>
+          <p>Glenrose Rehabilitation Research Center</p>
           <ul>
             <li>Helped design Bluetooth Low Energy monitoring devices</li>
             <li>Gained first experience developing for 8051 architecture (CC2540 SoC)</li>
@@ -324,6 +329,7 @@
         <div class="col">
           <h2>Volunteer Experience</h2>
           <ul>
+            <li>Member of Granite Curling Club Board of Directors 2018-present</li>
             <li>Judged U of A Capstone presentations 2016-2018</li>
             <li>Mentored 5 U of A Capstone groups in 2017</li>
             <li>Presented at U of A Electrical and Computer Engineering first year night 2015-2017</li>
